@@ -3,7 +3,7 @@ import org.jetbrains.dokka.gradle.DokkaExtension
 plugins {
     id("com.kelvsyc.internal.dokka")
     id("com.kelvsyc.internal.jacoco")
-    id("com.kelvsyc.internal.kotlin-plugin")
+    id("com.kelvsyc.internal.kotlin-gradle-library")
     id("com.kelvsyc.internal.github-publishing")
 }
 
@@ -11,23 +11,19 @@ configure<DokkaExtension> {
     moduleName.set("S3 Java Base")
 }
 
-gradlePlugin {
-    plugins.register("aws-s3-java-base") {
-        id = "com.kelvsyc.gradle.aws-s3-java-base"
-        implementationClass = "com.kelvsyc.gradle.plugins.S3JavaBasePlugin"
-    }
-}
-
 dependencies {
-    api("com.kelvsyc.gradle:aws-java-extensions")
     api("com.kelvsyc.gradle:clients-base")
 
     api(libs.aws.s3.java)
     api(libs.aws.s3.transfer.manager.java)
     api(libs.aws.sdk.core.java)
-    implementation(libs.aws.auth.java)
-    implementation(libs.aws.core.java)
-    implementation(libs.aws.regions.java)
+    api(libs.aws.auth.java)
+    api(libs.aws.regions.java)
 
     testImplementation(libs.mockk)
+}
+
+tasks.test {
+    // FIXME https://github.com/gradle/gradle/issues/18647
+    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
